tests/algorithms/x/C/sorts/topological_sort.c
// Generated by Mochi 0.10.32 on 2025-08-11 17:23 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t topological_sort_len;

static int contains_str(const char *arr[], size_t len, const char *val) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(arr[i], val) == 0) return 1;
    }
    return 0;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_str(const char **arr, size_t len) {
    size_t cap = 2;
    for (size_t i = 0; i < len; i++) cap += strlen(arr[i]) + 1;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        size_t n = strlen(arr[i]);
        memcpy(buf + pos, arr[i], n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

typedef struct { const char **keys; void **vals; size_t *lens; size_t len; size_t cap; } MapSL;

typedef struct { const char **keys; int *vals; size_t len; size_t cap; } MapSI;

static int map_get_si(const char *keys[], const int vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

static void* map_get_sl(const char *keys[], void *vals[], const size_t lens[], size_t len, const char *key, size_t *out_len) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) { if (out_len) *out_len = lens[i]; return vals[i]; }
    }
    if (out_len) *out_len = 0;
    return NULL;
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct Anon1 Anon1;

struct Anon1 {
};

static const char* edges_keys[21] = {"a", "b", "c", "d", "e"};
const char* edges_vals_0[2] = {"c", "b"};
const char* edges_vals_1[2] = {"d", "e"};
const char* edges_vals_2[0] = {};
const char* edges_vals_3[0] = {};
const char* edges_vals_4[0] = {};
static void* edges_vals[21] = {edges_vals_0, edges_vals_1, edges_vals_2, edges_vals_3, edges_vals_4};
static size_t edges_lens[21] = {2, 2, 0, 0, 0};
size_t edges_len = 5;
MapSL edges = { edges_keys, edges_vals, edges_lens, 5, 21 };
const char* vertices_init[5] = {"a", "b", "c", "d", "e"};
const char* *vertices = vertices_init;
size_t vertices_len = 5;

const char* * topological_sort(const char* start, MapSI visited, const char* * sort, size_t sort_len);
void user_main();
int main(void);

const char* * topological_sort(const char* start, MapSI visited, const char* * sort, size_t sort_len) {
    visited[(int)(start)] = 1LL;
    const char* *neighbors = map_get_sl(edges.keys, edges.vals, edges.lens, edges.len, start, &_len);
    size_t neighbors_len = edges_lens[start];
    long long i = 0LL;
    while (i < neighbors_len) {
        const char* neighbor = neighbors[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? neighbors_len + _mochi_idx : _mochi_idx;})];
        if (!(contains_str(visited.keys, visited.len, neighbor))) {
            sort = topological_sort(neighbor, visited, sort, sort_len);
            sort_len = topological_sort_len;
        }
        i = i + 1LL;
    }
    sort = list_append_str(sort, &sort_len, start);
    if (visited_len != 5LL) {
        long long j = 0LL;
        while (j < 5LL) {
            const char* v = vertices[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? vertices_len + _mochi_idx : _mochi_idx;})];
            if (!(contains_str(visited.keys, visited.len, v))) {
                sort = topological_sort(v, visited, sort, sort_len);
                sort_len = topological_sort_len;
            }
            j = j + 1LL;
        }
    }
    return topological_sort_len = sort_len, sort;
}

void user_main() {
    const char* *result = topological_sort("a", (Anon1){}, NULL, 0);
    size_t result_len = topological_sort_len;
    puts(str_list_str(result, result_len));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
